# IntroToParallelProgramming

./: .gitignore  0.0_SquaringNumbers.cu  0.1_CubingNumbers.cu  0_SquaringNumbers.cu  README.md
Problem_1/: CMakeLists.txt  student_func.cu
